# bioinformatics_mini_2025

./: .gitignore  README.md  pyproject.toml
hw2/: notebook.ipynb
notebooks/labs/: 01_sequences.ipynb  02-statistics.ipynb  02_statistics.ipynb  02_statistics_results.ipynb  03-visualization-results.ipynb  03-visualization.ipynb  04-pairwise-alignment-results.ipynb  04-pairwise-alignment.ipynb  04_pairwise_alignment.ipynb  05-MSA.ipynb  06-protein_dynamics-results.ipynb  06-protein_dynamics.ipynb  07-proteomics-student.ipynb  07-proteomics_results.ipynb  08-protein_interactions-results.ipynb  08-protein_interactions.ipynb  09-genomics-results.ipynb  09-genomics.ipynb  10-3d-genome-results.ipynb  10-3d-genome.ipynb  11-transcriptomics-results.ipynb  11-transcriptomics.ipynb
notebooks/lectures/: 01_Introduction.ipynb
notebooks/lectures/data/: 01_example.fasta  01_example.fastq  01_long_sequence.fasta
plots/lecture2/: benjamini-hochberg.py  bootstrapping.py  pdfs.py  posterior_update.py  reshuffling.py  rna-seq-nb.py
plots/lecture3/: cluster_validation.py  corrections.py  dendrogram.py  dimension_static.py  heatmap.py  k-means.py  kldiv.py  lapacian.py  metrics.py  pca.py  reduction_comparison.py  spectral.py  tsne.py  umap_plot.py
plots/lecture4/: alignment_intro.py  blosum.py  e-value.py  evalue.py  intro.py  lambda.py  needleman-wunsh.py  pam.py  protein_alignment.py  smith-waterman.py
